--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <svg height="400" width="400">
+        <circle 
+        r="190" 
+        cx="200" 
+        cy="200"
+        fill="transparent"
+        stroke="blue"
+        stroke-width="15"
+        transform="rotate(-90 200 200)"
+        > </circle>
+    </svg>
     <input id="duration" value="30"/>
     <button id="start">Start</button>
     <button id="pause">Pause</button>
